<resources>
    <string name="app_name">Dolaznost</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name">Course name</string>
    <string name="num_of_lectures">Number of lectures</string>
    <string name="num_of_exercises">Number of exercises</string>
    <string name="num_of_lab">Number of laboratory exercises</string>
    <string name="save">Save</string>
    <string name="attendance">Attendance</string>
    <string name="statistics">Statistics</string>
    <string name="goodCourseState">#167306</string>
    <string name="alarmCourseState">#E6DB15</string>
    <string name="failCourseState">#A61C07</string>
    <string name="filedNotFilled">Fill all inputs</string>
    <string name="fieldMustFill">You have to fill the inputs!</string>
    <string name="noCourse">No such course found</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="positiveReply">YES!</string>
    <string name="negativeReply">NO!</string>
    <string name="must_come">Must come:</string>
    <string name="remaining">Remaining:</string>
    <string name="lecture">Lecture:</string>
    <string name="exercise">Exercise:</string>
    <string name="laboratory">Laboratory:</string>
    <string name="must_still_come">Must still come:</string>
    <string name="altogether_must_be">Altogether must be:</string>
    <string name="youve_been_so_far">You\'ve been so far:</string>
    <string name="left_until_the_end">Left until the end:</string>
    <string name="change_attendance">Change attendance</string>
    <string name="new_course">New course</string>
    <string name="attendance_percentage">Attendance percentage</string>
    <string name="number_of_hours">Number of hours</string>
    <string name="attended">Attended</string>
    <string name="missed">Missed</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="apk_name">Attendance</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="delete_all_courses">Delete all courses</string>
    <string name="required">Required.</string>
    <string name="password">password</string>
    <string name="email">email</string>
</resources>
