<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/marginLarge"
        android:paddingEnd="@dimen/marginLarge"
        android:orientation="vertical">

    <TextView
            android:id="@+id/courseName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/HeadingTextView"
            android:layout_marginBottom="@dimen/marginLarge"
            android:text="@string/course_name"/>

    <RadioGroup
            android:id="@+id/btnGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/btnMissed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/missed"
                android:layout_weight="1"/>

        <RadioButton
                android:id="@+id/btnAttend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attended"
                android:layout_weight="1"/>

    </RadioGroup>

    <EditText
            android:id="@+id/numOfHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_hours"
            android:layout_marginBottom="@dimen/marginLarge"
            android:inputType="number"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/btnChangeCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLarge"
            android:layout_marginBottom="@dimen/marginLarge"
            android:layout_gravity="center"
            android:text="@string/save"/>

</LinearLayout>