<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100">

    <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/ic_access_time_black_72dp"
            app:layout_constraintBottom_toTopOf="@+id/inputArea"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apk_name"
            android:theme="@style/ThemeOverlay.MyTitleText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

    <View
            android:id="@+id/inputArea"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@color/grey_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/fieldEmail"
            style="@style/ThemeOverlay.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/emailSignInButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/fieldPassword"
            app:layout_constraintTop_toTopOf="@+id/inputArea" />

    <EditText
            android:id="@+id/fieldPassword"
            style="@style/ThemeOverlay.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/emailCreateAccountButton"
            app:layout_constraintLeft_toRightOf="@+id/fieldEmail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputArea" />

    <Button
            android:id="@+id/emailSignInButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/fieldEmail"
            app:layout_constraintRight_toRightOf="@+id/fieldEmail"
            app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

    <Button
            android:id="@+id/emailCreateAccountButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/fieldPassword"
            app:layout_constraintRight_toRightOf="@+id/fieldPassword"
            app:layout_constraintTop_toBottomOf="@+id/fieldPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>