<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="10dp"
        android:id="@+id/fragmentCourseDetailsContainer">

    <ProgressBar
            android:id="@+id/courseLoadingProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="36dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/lecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture"
            app:layout_constraintTop_toBottomOf="@+id/courseName"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/lectureHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="45"
            app:layout_constraintTop_toBottomOf="@+id/courseName"
            app:layout_constraintLeft_toRightOf="@id/lecture"/>


    <TextView
            android:id="@+id/exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            app:layout_constraintTop_toBottomOf="@+id/courseName"
            app:layout_constraintLeft_toRightOf="@id/lectureHours"
            app:layout_constraintRight_toLeftOf="@id/laboratory"/>

    <TextView
            android:id="@+id/exerciseHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            app:layout_constraintTop_toBottomOf="@+id/courseName"
            app:layout_constraintLeft_toRightOf="@id/exercise"/>

    <TextView
            android:id="@+id/laboratory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laboratory"
            app:layout_constraintTop_toBottomOf="@+id/courseName"
            app:layout_constraintLeft_toRightOf="@id/exerciseHours"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:id="@+id/laboratoryHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            app:layout_constraintTop_toBottomOf="@+id/courseName"
            app:layout_constraintLeft_toRightOf="@id/laboratory"/>

    <TextView
            android:id="@+id/stillMustCome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must_still_come"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lecture"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/stillMustComeHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30.5"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lecture"
            app:layout_constraintLeft_toRightOf="@id/stillMustCome"/>

    <TextView
            android:id="@+id/attendanceNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altogether_must_be"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/stillMustCome"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/attendanceNumHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="52.5"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/stillMustCome"
            app:layout_constraintLeft_toRightOf="@id/attendanceNum"/>

    <TextView
            android:id="@+id/attendanceBeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youve_been_so_far"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/attendanceNum"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/attendanceBeenHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/attendanceNum"
            app:layout_constraintLeft_toRightOf="@id/attendanceBeen"/>

    <TextView
            android:id="@+id/courseLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_until_the_end"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/attendanceBeen"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/courseLeftHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="37"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/attendanceBeen"
            app:layout_constraintLeft_toRightOf="@id/courseLeft"/>

    <Button
            android:id="@+id/btnAttendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/design_default_color_primary"
            android:text="@string/change_attendance"/>



</androidx.constraintlayout.widget.ConstraintLayout>